hlaf of work for products list(tablets and pc)

--- a/index.html
+++ b/index.html
@@ -25,18 +25,26 @@
 <div id="content">
 
 <section class="featured gridLine">
-    <article class="article-first"><img src="images/watch.png">  </article>
-    <article class="article2"><img src="images/bag.png"></article>
-    <article class="article3"><img src="images/watch.png"></article>
-    <article class="article4"><img src="images/bag.png"></article>
-    <article class="article5"><img src="images/watch.png"></article>
-    <article class="article6"><img src="images/bag.png"></article>
+    <div class="line1">
+    <article class="article-first"><img src="images/watch.png"> <div class="textBelow"><b>ACCESSORIES</b><br><span class="smallText">25 items</span></div> <div class="more"></div><div class="more2"><span class="btnMore unselectable">View more</span></div></article>
+    <article class="article2"><img src="images/bag.png"><div class="textBelow"><b>ACCESSORIES</b><br><span class="smallText">25 items</span></div> </article>
+    <article class="article3"><img src="images/watch.png"><div class="textBelow"><b>ACCESSORIES</b><br><span class="smallText">25 items</span></div> </article>
+    </div>
+    <div class="line2">
+    <article class="article4"><img src="images/bag.png"><div class="textBelow"><b>ACCESSORIES</b><br><span class="smallText">25 items</span></div> </article>
+    <article class="article5"><img src="images/watch.png"><div class="textBelow"><b>ACCESSORIES</b><br><span class="smallText">25 items</span></div> </article>
+    <article class="article6"><img src="images/bag.png"><div class="textBelow"><b>ACCESSORIES</b><br><span class="smallText">25 items</span></div> </article>
+    </div>
 </section>
 
 <section class="new gridLine">
-    <article class="article-first">1</article>
-    <article>2</article>
-    <article class="article-last">3</article>
+    <div class="line1">
+    <article class="article-first articleDouble"><div class="idk"><h2 class="idkText">BEST PRICE IN THIS MONTH</h2><span class="btn unselectable">VIEW ALL</span></div><img src="./images/sportsBag.png"></article>
+    </div>
+    <div class="line2">
+    <article class="articleB">2</article>
+    <article class="article-last articleB">3</article>
+    </div>
 </section>
 
 </div>
