Products for pc almost finished

--- a/index.html
+++ b/index.html
@@ -23,17 +23,18 @@
 
 
 <div id="content">
-
+   <div class="justFlex"><h2 class="vertical-left">FEATURED CATEGORIES</h2><span class="vertical-right"><img src="./images/icons/left-arrow.png"><img src="./images/icons/right-arrow.png"></span></div>
 <section class="featured gridLine">
+    
     <div class="line1">
-    <article class="article-first"><img src="images/watch.png"> <div class="textBelow"><b>ACCESSORIES</b><br><span class="smallText">25 items</span></div> <div class="more"></div><div class="more2"><span class="btnMore unselectable">View more</span></div></article>
-    <article class="article2"><img src="images/bag.png"><div class="textBelow"><b>ACCESSORIES</b><br><span class="smallText">25 items</span></div> </article>
-    <article class="article3"><img src="images/watch.png"><div class="textBelow"><b>ACCESSORIES</b><br><span class="smallText">25 items</span></div> </article>
+    <article class="article-first"><img src="./images/watch.png"> <div class="textBelow"><b>ACCESSORIES</b><br><span class="smallText">25 items</span></div> <div class="more"></div><div class="more2"><span class="btnMore unselectable">View more</span></div></article>
+    <article class="article2"><img src="./images/bag.png"><div class="textBelow"><b>ACCESSORIES</b><br><span class="smallText">25 items</span></div> </article>
+    <article class="article3"><img src="./images/watch.png"><div class="textBelow"><b>ACCESSORIES</b><br><span class="smallText">25 items</span></div> </article>
     </div>
     <div class="line2">
-    <article class="article4"><img src="images/bag.png"><div class="textBelow"><b>ACCESSORIES</b><br><span class="smallText">25 items</span></div> </article>
-    <article class="article5"><img src="images/watch.png"><div class="textBelow"><b>ACCESSORIES</b><br><span class="smallText">25 items</span></div> </article>
-    <article class="article6"><img src="images/bag.png"><div class="textBelow"><b>ACCESSORIES</b><br><span class="smallText">25 items</span></div> </article>
+    <article class="article4"><img src="./images/bag.png"><div class="textBelow"><b>ACCESSORIES</b><br><span class="smallText">25 items</span></div> </article>
+    <article class="article5"><img src="./images/watch.png"><div class="textBelow"><b>ACCESSORIES</b><br><span class="smallText">25 items</span></div> </article>
+    <article class="article6"><img src="./images/bag.png"><div class="textBelow"><b>ACCESSORIES</b><br><span class="smallText">25 items</span></div> </article>
     </div>
 </section>
 
@@ -42,8 +43,52 @@
     <article class="article-first articleDouble"><div class="idk"><h2 class="idkText">BEST PRICE IN THIS MONTH</h2><span class="btn unselectable">VIEW ALL</span></div><img src="./images/sportsBag.png"></article>
     </div>
     <div class="line2">
-    <article class="articleB">2</article>
-    <article class="article-last articleB">3</article>
+    <article class="articleB"><img src="./images/bag.png"></article>
+    <article class="articleB"><img src="./images/watch.png"></article>
+    </div>
+</section>
+
+<div class="justFlex"><span class="vertical-left">FEATURED CATEGORIES</span><span class="vertical-right"><img src="./images/icons/left-arrow.png"><img src="./images/icons/right-arrow.png"></span></div>
+
+<section class="other gridLine">
+    <div class="line1">
+        <article class="articleB"><img src="./images/watch.png"></article>
+    <article class="articleB"><img src="./images/bag.png"></article>
+    </div>
+    <div class="line2">
+    <article class="articleB"><img src="./images/watch.png"></article>
+    <article class="articleB"><img src="./images/bag.png"></article>
+    </div>
+</section>
+
+<div class="justFlex"><span class="vertical-left">FEATURED CATEGORIES</span><span class="vertical-right"><img src="./images/icons/left-arrow.png"><img src="./images/icons/right-arrow.png"></span></div>
+
+<section class="blog gridLine">
+    <div class="line3">
+        <article class="articleB"><img src="./images/watch.png"></article>
+        <article class="articleB"><img src="./images/bag.png"></article>
+        <article class="articleB"><img src="./images/watch.png"></article>
+    </div>
+</section>
+
+<section class="blogText gridLine">
+    <div class="line3">
+        <article class="articleB">r7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfq</article>
+        <article class="articleB">ghaegerg r7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfq</article>
+        <article class="articleB">ergheuighue r7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfq</article>
+    </div>
+</section>
+
+
+<div class="justFlex"><span class="vertical-left">FEATURED CATEGORIES</span><span class="vertical-right"><img src="./images/icons/left-arrow.png"><img src="./images/icons/right-arrow.png"></span></div>
+<section class="brands gridLine">
+    <div class="line3">
+        <img src="./images/logos/logo1.png">
+        <img src="./images/logos/logo2.png">
+        <img src="./images/logos/logo3.png">
+        <img src="./images/logos/logo4.png">
+        <img src="./images/logos/logo5.png">
+        <img src="./images/logos/logo6.png">
     </div>
 </section>
 
