menu for pc, articles for pc finished

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<div class="vertical-center"><div class="navbar" id="navbar"><header><h1 class="header unselectable">Bazar</h1><img alt="logo" class="logo" id="logo" src="./images/icons/clock.png"></header><nav>home dewo fwhfu</nav><div id="icon-menu" class="icon-menu"><img alt="search icon" class="menu-icon" src="./images/icons/search.png"><img alt="user icon" class="menu-icon" src="./images/icons/user.png"><img alt="cart icon" class="menu-icon" src="./images/icons/cart.png"><img alt="heart icon" class="menu-icon" src="./images/icons/heart.png"></div></div></div>
+<div class="vertical-center"><div class="navbar" id="navbar"><header><h1 class="header unselectable">Bazar</h1><img alt="logo" class="logo" id="logo" src="./images/icons/clock.png"></header><nav class="nav"><div class="menu-item">HOME</div><div class="menu-item">SHOP</div><div class="menu-item">PRODUCTS</div><div class="menu-item">BLOG</div></nav><div id="icon-menu" class="icon-menu"><img alt="search icon" class="menu-icon" src="./images/icons/search.png"><img alt="user icon" class="menu-icon" src="./images/icons/user.png"><img alt="cart icon" class="menu-icon" src="./images/icons/cart.png"><img alt="heart icon" class="menu-icon" src="./images/icons/heart.png"></div></div></div>
 
 
 <div class="thumbnail-holder">
@@ -65,17 +65,19 @@
 
 <section class="blog gridLine">
     <div class="line3">
-        <article class="articleB"><img src="./images/watch.png"></article>
+        <img src="./images/icons/left-arrow.png" class="arrows-article">
+        <article class="articleB article-hide"><img src="./images/watch.png"></article>
         <article class="articleB"><img src="./images/bag.png"></article>
-        <article class="articleB"><img src="./images/watch.png"></article>
+        <article class="articleB article-hide"><img src="./images/watch.png"></article>
+        <img src="./images/icons/right-arrow.png" class="arrows-article">
     </div>
 </section>
 
 <section class="blogText gridLine">
     <div class="line3">
-        <article class="articleB">r7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfq</article>
+        <article class="articleB article-hide">r7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfq</article>
         <article class="articleB">ghaegerg r7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfq</article>
-        <article class="articleB">ergheuighue r7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfq</article>
+        <article class="articleB article-hide">ergheuighue r7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfqr7e909ezgfq r7e909ezgfq r7e909ezgfq vr7e909ezgfq r7e909ezgfq r7e909ezgfq r7e909ezgfqv r7e909ezgfq r7e909ezgfq r7e909ezgfq</article>
     </div>
 </section>
 
@@ -83,12 +85,12 @@
 <div class="justFlex"><span class="vertical-left">FEATURED CATEGORIES</span><span class="vertical-right"><img src="./images/icons/left-arrow.png"><img src="./images/icons/right-arrow.png"></span></div>
 <section class="brands gridLine">
     <div class="line3">
-        <img src="./images/logos/logo1.png">
-        <img src="./images/logos/logo2.png">
-        <img src="./images/logos/logo3.png">
-        <img src="./images/logos/logo4.png">
-        <img src="./images/logos/logo5.png">
-        <img src="./images/logos/logo6.png">
+        <article class="articleC"><img src="./images/watch.png"></article>
+        <article class="articleC"><img src="./images/watch.png" ></article>
+        <article class="articleC"><img src="./images/watch.png"></article>
+        <article class="articleC"><img src="./images/watch.png"></article>
+        <article class="articleC"><img src="./images/watch.png" ></article>
+        <article class="articleC"><img src="./images/watch.png" ></article>
     </div>
 </section>
 
