Only animations left for PC, tablet done,  mobile - only articles left

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
 
-<div class="vertical-center"><div class="navbar" id="navbar"><header><h1 class="header unselectable">Bazar</h1><img alt="logo" class="logo" id="logo" src="./images/icons/clock.png"></header><nav class="nav"><div class="menu-item">HOME</div><div class="menu-item">SHOP</div><div class="menu-item">PRODUCTS</div><div class="menu-item">BLOG</div></nav><div id="icon-menu" class="icon-menu"><img alt="search icon" class="menu-icon" src="./images/icons/search.png"><img alt="user icon" class="menu-icon" src="./images/icons/user.png"><img alt="cart icon" class="menu-icon" src="./images/icons/cart.png"><img alt="heart icon" class="menu-icon" src="./images/icons/heart.png"></div></div></div>
+<div class="vertical-center"> <div id="search"><input type="text" placeholder="Search"></div>  <div class="menu-btn"><div class="btn-part"></div><div class="btn-part"></div><div class="btn-part"></div><div class="clickMe"></div>  </div>   <div class="navbar" id="navbar"> <header><h1 class="header unselectable">Bazar</h1><img alt="logo" class="logo" id="logo" src="./images/icons/clock.png"></header><nav class="nav"><div class="menu-item unselectable">HOME</div><div class="menu-item unselectable">SHOP</div><div class="menu-item unselectable">PRODUCTS</div><div class="menu-item unselectable">BLOG</div></nav><div id="icon-menu" class="icon-menu"><img alt="search icon" class="menu-icon" src="./images/icons/search.png"><img alt="user icon" class="menu-icon" src="./images/icons/user.png"><img alt="cart icon" class="menu-icon" src="./images/icons/cart.png"><img alt="heart icon" class="menu-icon" src="./images/icons/heart.png"></div></div></div>
 
 
 <div class="thumbnail-holder">
-    <div class="arrows"><img alt="go back arrow" class="unselectable arrow" src="./images/icons/back.png"><img alt="go back arrow" class="unselectable arrow" src="./images/icons/next.png"></div>
+    <div class="arrows"><img alt="go back arrow" class="unselectable arrow leftarrow" src="./images/icons/back.png"><img alt="go back arrow" class="unselectable arrow rightarrow" src="./images/icons/next.png"></div>
     <div class="thumbnail" id="thumbnail1"><div class="info"><div><p class="noMargin">TOP SELL THIS MONTH</p><h1>Watch collection</h1><div class="shopNow unselectable">SHOP NOW</div></div></div><div class="img-div"><img alt="thumbnail-img" src="./images/watch.png" class="thumbnail-img unselectable"></div></div>
     <div class="thumbnail" id="thumbnail2"></div>
     <div class="thumbnail" id="thumbnail3"></div>
@@ -22,7 +22,7 @@
 </div>
 
 
-<div id="content">
+<main id="content">
    <div class="justFlex"><h2 class="vertical-left">FEATURED CATEGORIES</h2><span class="vertical-right"><img src="./images/icons/left-arrow.png"><img src="./images/icons/right-arrow.png"></span></div>
 <section class="featured gridLine">
     
@@ -94,8 +94,12 @@
     </div>
 </section>
 
-</div>
+</main>
 
+
+    <section id="preFooter"><h2>Some text</h2><p>Subscribe bklah blah</p><br><input type="text" id="email" placeholder="Enter your email here"/><button id="subscribe" type="submit">Subscribe</button></section>
+
+<footer><div><div><h2>Bazar</h2>fwehfh rtgqeg rwegeg rgegr<br>f9q583qfg req5gg rtgg</div> <div><h2>Information</h2><nav><a href="#">link1</a><a href="#">link2</a><a href="#">link3</a></nav></div> <div><h2>Hello</h2><nav><a href="#">link1</a><a href="#">link2</a><a href="#">link3</a></nav></div> </div> </footer>
 
 </body>
 </html>
