more work with articles for pc and tablets. -One line of articles was missing, done -One article should have been darker, done(buttons still missing) -subscribe button text color and uppercase

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     <article class="article-first articleDouble"><div class="idk"><h2 class="idkText">BEST PRICE IN THIS MONTH</h2><span class="btn unselectable">VIEW ALL</span></div><img src="./images/sportsBag.png"></article>
     </div>
     <div class="line2">
-    <article class="articleB"><img src="./images/bag.png"></article>
-    <article class="articleB"><img src="./images/watch.png"></article>
+    <article class="articleB"><img src="./images/bag.png"><div class="textBelow"><b>Smart Watche</b><br><span class="smallText">$56.99</span></div></article>
+    <article class="articleB"><img src="./images/watch.png"><div class="textBelow"><b>Smart Watche</b><br><span class="smallText">$56.99</span></div></article>
     </div>
 </section>
 
@@ -52,12 +52,23 @@
 
 <section class="other gridLine">
     <div class="line1">
-        <article class="articleB"><img src="./images/watch.png"></article>
-    <article class="articleB"><img src="./images/bag.png"></article>
+        <article class="articleB"><div id="imgDiv"><img src="./images/watch.png"> <div class="more"></div><div class="more2"><span class="unselectable"></span></div> </div><div class="textBelow"><b>Smart Watche</b><br><span class="smallText">$56.99</span></div> </article>
+    <article class="articleB"><img src="./images/bag.png"><div class="textBelow"><b>Smart Watche</b><br><span class="smallText">$56.99</span></div></article>
     </div>
     <div class="line2">
-    <article class="articleB"><img src="./images/watch.png"></article>
-    <article class="articleB"><img src="./images/bag.png"></article>
+    <article class="articleB"><img src="./images/watch.png"><div class="textBelow"><b>Smart Watche</b><br><span class="smallText">$56.99</span></div></article>
+    <article class="articleB"><img src="./images/bag.png"><div class="textBelow"><b>Smart Watche</b><br><span class="smallText">$56.99</span></div></article>
+    </div>
+</section>
+
+<section class="other gridLine">
+    <div class="line1">
+        <article class="articleB"><img src="./images/watch.png"><div class="textBelow"><b>Smart Watche</b><br><span class="smallText">$56.99</span></div></article>
+    <article class="articleB"><img src="./images/bag.png"><div class="textBelow"><b>Smart Watche</b><br><span class="smallText">$56.99</span></div></article>
+    </div>
+    <div class="line2">
+    <article class="articleB"><img src="./images/watch.png"><div class="textBelow"><b>Smart Watche</b><br><span class="smallText">$56.99</span></div></article>
+    <article class="articleB"><img src="./images/bag.png"><div class="textBelow"><b>Smart Watche</b><br><span class="smallText">$56.99</span></div></article>
     </div>
 </section>
 
@@ -97,7 +108,7 @@
 </main>
 
 
-    <section id="preFooter"><h2>Some text</h2><p>Subscribe bklah blah</p><br><input type="text" id="email" placeholder="Enter your email here"/><button id="subscribe" type="submit">Subscribe</button></section>
+    <section id="preFooter"><h2>Some text</h2><p>Subscribe bklah blah</p><br><input type="text" id="email" placeholder="Enter your email here"/><button id="subscribe" type="submit">SUBSCRIBE</button></section>
 
 <footer><div><div><h2>Bazar</h2>fwehfh rtgqeg rwegeg rgegr<br>f9q583qfg req5gg rtgg</div> <div><h2>Information</h2><nav><a href="#">link1</a><a href="#">link2</a><a href="#">link3</a></nav></div> <div><h2>Hello</h2><nav><a href="#">link1</a><a href="#">link2</a><a href="#">link3</a></nav></div> </div> </footer>
 
