whole responsive homepage :)

--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ecommerce</title>
-    <link rel="stylesheet" type="text/css" href="./index.css">
+    <link rel="stylesheet" type="text/css" href="./style/index.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Serif&display=swap" rel="stylesheet">
 </head>
 <body>
 
-<div class="vertical-center"> <div id="search"><input type="text" placeholder="Search"></div>  <div class="menu-btn"><div class="btn-part"></div><div class="btn-part"></div><div class="btn-part"></div><div class="clickMe"></div>  </div>   <div class="navbar" id="navbar"> <header><h1 class="header unselectable">Bazar</h1><img alt="logo" class="logo" id="logo" src="./images/icons/clock.png"></header><nav class="nav"><div class="menu-item unselectable">HOME</div><div class="menu-item unselectable">SHOP</div><div class="menu-item unselectable">PRODUCTS</div><div class="menu-item unselectable">BLOG</div></nav><div id="icon-menu" class="icon-menu"><img alt="search icon" class="menu-icon" src="./images/icons/search.png"><img alt="user icon" class="menu-icon" src="./images/icons/user.png"><img alt="cart icon" class="menu-icon" src="./images/icons/cart.png"><img alt="heart icon" class="menu-icon" src="./images/icons/heart.png"></div></div></div>
+<div class="vertical-center"> <div id="search"><input type="text" placeholder="Search"></div>  <div class="menu-btn"><div class="btn-part"></div><div class="btn-part"></div><div class="btn-part"></div><div class="clickMe"></div>  </div>   <div class="navbar" id="navbar"> <header><h1 class="header unselectable">Bazar</h1><img alt="logo" class="logo" id="logo" src="./images/icons/clock.png"></header><nav class="nav"><div class="menu-item unselectable"><a href="#">HOME</a></div><div class="menu-item unselectable"><a href="#">SHOP</a></div><div class="menu-item unselectable"><a href="#">PRODUCTS</a></div><div class="menu-item unselectable"><a href="#">BLOG</a></div></nav><div id="icon-menu" class="icon-menu"><img alt="search icon" class="menu-icon" src="./images/icons/search.png"><img alt="user icon" class="menu-icon" src="./images/icons/user.png"><img alt="cart icon" class="menu-icon" src="./images/icons/cart.png"><img alt="heart icon" class="menu-icon" src="./images/icons/heart.png"></div></div></div>
 
 
 <div class="thumbnail-holder">
     <div class="arrows"><img alt="go back arrow" class="unselectable arrow leftarrow" src="./images/icons/back.png"><img alt="go back arrow" class="unselectable arrow rightarrow" src="./images/icons/next.png"></div>
-    <div class="thumbnail" id="thumbnail1"><div class="info"><div><p class="noMargin">TOP SELL THIS MONTH</p><h1>Watch collection</h1><div class="shopNow unselectable">SHOP NOW</div></div></div><div class="img-div"><img alt="thumbnail-img" src="./images/watch.png" class="thumbnail-img unselectable"></div></div>
+    <div class="thumbnail" id="thumbnail1"><div class="info"><div><p class="noMargin">TOP SELL THIS MONTH</p><h1>Watch collection</h1><div class="shopNow unselectable">SHOP&nbsp;NOW</div></div></div><div class="img-div"><img alt="thumbnail-img" src="./images/watch.png" class="thumbnail-img unselectable"></div></div>
     <div class="thumbnail" id="thumbnail2"></div>
     <div class="thumbnail" id="thumbnail3"></div>
     <div class="vertical-center thumbnail-btns"><div class="thumbnail-button clicked"></div> <div class="thumbnail-button"></div> <div class="thumbnail-button"></div></div>
@@ -48,11 +48,11 @@
     </div>
 </section>
 
-<div class="justFlex"><span class="vertical-left">FEATURED CATEGORIES</span><span class="vertical-right"><img src="./images/icons/left-arrow.png"><img src="./images/icons/right-arrow.png"></span></div>
+<div class="justFlex"><span class="vertical-left"><nav class="nav2"><div class="menu-item2 unselectable"><a href="#">NEW&nbsp;ARRIVALS</a></div><div class="menu-item2 unselectable"><a href="#">FEATURED</a></div><div class="menu-item2 unselectable"><a href="#">BET&nbsp;SELLING</a></div><div class="menu-item2 unselectable"><a href="#">ON&nbsp;SALES</a></div></nav></span><span class="vertical-right"><img src="./images/icons/left-arrow.png"><img src="./images/icons/right-arrow.png"></span></div>
 
 <section class="other gridLine">
     <div class="line1">
-        <article class="articleB"><div id="imgDiv"><img src="./images/watch.png"> <div class="more"></div><div class="more2"><span class="unselectable"></span></div> </div><div class="textBelow"><b>Smart Watche</b><br><span class="smallText">$56.99</span></div> </article>
+        <article class="articleB articleBuy"><div id="imgDiv"><img src="./images/watch.png"> <div class="more"></div> <div class="more2"><div id="shopBtns"><img src="./images/icons/cart2.png"><span class="divide"></span><img src="./images/icons/heart2.png"><span class="divide"></span><img src="./images/icons/search2.png"></div></div>  </div><div class="textBelow"><b>Smart Watche</b><br><span class="smallText">$56.99</span></div> </article>
     <article class="articleB"><img src="./images/bag.png"><div class="textBelow"><b>Smart Watche</b><br><span class="smallText">$56.99</span></div></article>
     </div>
     <div class="line2">
@@ -110,7 +110,7 @@
 
     <section id="preFooter"><h2>Some text</h2><p>Subscribe bklah blah</p><br><input type="text" id="email" placeholder="Enter your email here"/><button id="subscribe" type="submit">SUBSCRIBE</button></section>
 
-<footer><div><div><h2>Bazar</h2>fwehfh rtgqeg rwegeg rgegr<br>f9q583qfg req5gg rtgg</div> <div><h2>Information</h2><nav><a href="#">link1</a><a href="#">link2</a><a href="#">link3</a></nav></div> <div><h2>Hello</h2><nav><a href="#">link1</a><a href="#">link2</a><a href="#">link3</a></nav></div> </div> </footer>
+<footer><div><div><h2>Bazar</h2>fwehfh rtgqeg rwegeg rgegr<br>f9q583qfg req5gg rtgg</div> <div><h2>Information</h2><nav><a href="#">link1</a><a href="#">link2</a><a href="#">link3</a></nav></div> <div><h2>Hello</h2><nav><a href="#">link1</a><a href="#">link2</a><a href="#">link3</a></nav></div> </div> <span class="underFooter"><span>&copy;2020 <span class="bazar">Bazar</span>. All Rights Reserved</span> <span><div class="icon-menu"><img alt="mastercard icon" class="menu-icon" src="./images/icons/mastercard.png"><img alt="visa icon" class="menu-icon" src="./images/icons/visa.png"><img alt="paypal icon" class="menu-icon" src="./images/icons/paypal.png"><img alt="american express icon" class="menu-icon" src="./images/icons/american-express.png"></div></span> <span><div class="icon-menu"><img alt="fb icon" class="menu-icon" src="./images/icons/fb.png"><img alt="twitter icon" class="menu-icon" src="./images/icons/twitter.png"><img alt="pinterest icon" class="menu-icon" src="./images/icons/pint.png"><img alt="heart icon" class="menu-icon" src="./images/icons/heart.png"></div></span></span></footer>
 
 </body>
 </html>
